--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "cd frontend && npm install && npm run export"
+  command = "cd frontend && npm install && npm run build"
   publish = "frontend/out"
 
 [context.production.environment]
