Update netlify.toml | forgot to replace placeholder with actual file

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,4 @@
   publish = "frontend/out"
 
 [context.production.environment]
-  BACKEND_URL = "https://your-backend.onrender.com"
+  BACKEND_URL = "https://chopwise-improved.onrender.com"
