--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.5.0",
     "papaparse": "^5.3.1",
     "framer-motion": "^10.12.16",
-    "@shadcn/ui": "0.2.4"
+    "@shadcn/ui": "0.2.4",
     "lucide-react": "^0.276.0"
   }
 }
