--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,25 @@
 {
   "name": "chopwise-frontend",
   "version": "1.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000"
   },
-  "dependencies": {
-  "next": "latest",
-  "react": "latest",
-  "react-dom": "latest",
+"dependencies": {
+  "next": "13.5.6",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
   "axios": "^1.5.0",
   "papaparse": "^5.3.1",
   "framer-motion": "^10.12.16",
   "lucide-react": "^0.276.0"
+},
+"devDependencies": {
+  "tailwindcss": "^3.3.2",
+  "postcss": "^8.4.23",
+  "autoprefixer": "^10.4.14"
 }
 
 }
