--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,15 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "axios": "^1.5.0",
-    "framer-motion": "^10.12.16"
+    "framer-motion": "^10.12.16",
+    "next": "^13.5.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "autoprefixer": "^10.4.14"
+    "tailwindcss": "^3.3.2"
   }
 }
