--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^1.5.0",
     "framer-motion": "^10.12.16",
-    "next": "^13.5.11",
+    "next": "^15.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
